Margin fix, sub-slogan.
The slogan was overlapping with the top button. Added top margin spacing
to .start-a-garage.

--- a/Unit_9/CSS/style.css
+++ b/Unit_9/CSS/style.css
@@ -151,6 +151,7 @@ li:hover {
 	height: 50px;
 	margin: auto;
 	margin-bottom: 30px;
+	margin-top: 30px;
 	padding: 12px;
 	display: block;
 }
